<resources>
    <string name="app_name">TaskAPP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Status Task -->
    <string name="status_task_todo">A Fazer</string>
    <string name="status_task_doing">Fazendo</string>
    <string name="status_task_done">Feitas</string>
    <string name="hint_edit_password">Digite sua senha</string>
    <string name="hint_edit_email">Digite seu e-mail</string>


    <!-- Generic -->
    <string name="text_title_warning">Atenção</string>
    <string name="text_title_button">Entendi</string>
    <string name="email_text">E-mail</string>
    <string name="password_text">Senha</string>
    <string name="email_empty">Preencha seu email.</string>
    <string name="password_empty">Preencha sua senha.</string>
    <string name="error_generic">Ocorreu um erro! Por favor, tente novamente mais tarde!</string>
    <string name="text_list_task_empty">Nenhuma tarefa cadastrada.</string>
    <string name="text_laod_list_task">Aguarde, estamos carregando as informações.</string>
    <string name="text_delete_success_task">Tarefa deltada com sucesso!</string>
    <string name="text_button_dialog_confirm">Confirma</string>
    <string name="text_title_dialog_delete">Deseja remover esta tarefa?</string>
    <string name="text_message_dialog_delete">Aperte em confirma para remover a tarefa.</string>

    <!-- Register Fragment -->
    <string name="email_empty_register_fragment">Preencha um e-mail válido.</string>
    <string name="password_empty_register_fragment">Preencha seu senha.</string>
    <string name="text_button_register_fragment">Criar conta</string>

    <!-- Recover Account Fragment -->
    <string name="text_info_recover_account">Informe seu e-mail de casdatrado para receber\n um link para alteração da senha</string>
    <string name="text_text_toolbar_recover_account_fragment">Recuperar conta</string>
    <string name="text_button_toolbar_recover_account_fragment">Recuperar conta</string>
    <string name="text_message_recover_account_fragment">Pronto, acabamos de enviar um link para seu e-mail.</string>

    <!-- Login Fragment -->
    <string name="text_button_login_fragment">Login</string>
    <string name="text_criar_conta_login_fragment">Criar conta</string>
    <string name="text_recuperar_conta_login_fragment">Recuperar conta</string>

    <!-- From Task Fragment -->
    <string name="description_empty_from_task_fragment">Preencha a descrição.</string>
    <string name="text_description_from_task_fragment">Descrição</string>
    <string name="hint_description_from_task_fragment">Criar nova tela de login do app</string>
    <string name="text_status_from_task_fragment">Status</string>
    <string name="radio_todo_from_task_fragment">A Fazer</string>
    <string name="radio_doing_from_task_fragment">Fazendo</string>
    <string name="radio_done_from_task_fragment">Feitas</string>
    <string name="text_save_success_from_task_fragment">Tarefa salva com sucesso.</string>
    <string name="text_update_success_from_task_fragment">Tarefa atualizada com sucesso.</string>

    <string name="text_button_from_task_fragment">Salvar</string>

    <!-- Home Fragment -->
    <string name="text_title_dialog_confirm_logout">Deseja sair da sua conta?</string>
    <string name="text_message_dialog_confirm_logout">Aperte em confirma para sair da sua conta.</string>


</resources>